ну теперь точно...

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,22 @@
-FROM node:alpine
+FROM node:20-alpine
 
 WORKDIR /usr/app
 
-COPY package.json .
-RUN npm install
 
-RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
+COPY package.json package-lock.json ./
+RUN npm ci --silent  
+
+
+RUN npm install -g react-scripts
+
 
 COPY . .
 
-CMD ["npm", "run", "start"]
+
+RUN chown -R node:node /usr/app && \
+    chmod -R 755 /usr/app
+
+
+USER node
+
+CMD ["npm", "start"]
